5.1
 * CEP-15: (C*) Add git submodule for Accord (CASSANDRA-18204)
 * Fix null value handling for static columns (CASSANDRA-18241)
 * Feature Flag for Accord Transactions (CASSANDRA-18195)
 * CEP-15: Multi-Partition Transaction CQL Support (Alpha) (CASSANDRA-17719)
 * CEP-15 (C*): Messaging and storage engine integration (CASSANDRA-17103)
 * Add option for MutualTlsAuthenticator to restrict the certificate validity period (CASSANDRA-18951)
 * Fix StorageService::constructRangeToEndpointMap for non-distributed keyspaces (CASSANDRA-19255)
 * Group nodetool cms commands into single command group (CASSANDRA-19393)
 * Register the measurements of the bootstrap process as Dropwizard metrics (CASSANDRA-19447)
 * Add LIST SUPERUSERS CQL statement (CASSANDRA-19417)
 * Modernize CQLSH datetime conversions (CASSANDRA-18879)
 * Harry model and in-JVM tests for partition-restricted 2i queries (CASSANDRA-18275)
 * Refactor cqlshmain global constants (CASSANDRA-19201)
 * Remove native_transport_port_ssl (CASSANDRA-19397)
 * Make nodetool reconfigurecms sync by default and add --cancel to be able to cancel ongoing reconfigurations (CASSANDRA-19216)
 * Expose auth mode in system_views.clients, nodetool clientstats, metrics (CASSANDRA-19366)
 * Remove sealed_periods and last_sealed_period tables (CASSANDRA-19189)
 * Improve setup and initialisation of LocalLog/LogSpec (CASSANDRA-19271)
 * Refactor structure of caching metrics and expose auth cache metrics via JMX (CASSANDRA-17062)
 * Allow CQL client certificate authentication to work without sending an AUTHENTICATE request (CASSANDRA-18857)
 * Extend nodetool tpstats and system_views.thread_pools with detailed pool parameters (CASSANDRA-19289)
 * Remove dependency on Sigar in favor of OSHI (CASSANDRA-16565)
 * Simplify the bind marker and Term logic (CASSANDRA-18813)
 * Limit cassandra startup to supported JDKs, allow higher JDKs by setting CASSANDRA_JDK_UNSUPPORTED (CASSANDRA-18688)